--- a/TelosysTools/telosys-tools.cfg
+++ b/TelosysTools/telosys-tools.cfg
@@ -30,7 +30,9 @@ ProjectVariable.REST_SERVER_PORT=8080
 ProjectVariable.REST_API_ROOT=/api/v1
 ProjectVariable.REST_URL_ROOT=http://localhost:8080
 ProjectVariable.JAVA_VERSION=23
-ProjectVariable.SPRING_BOOT_VERSION=3.4.4
+ProjectVariable.SPRING_BOOT_VERSION='3.4.4'
+ProjectVariable.BOOTSTRAP_VERSION='5.3.1'
+ProjectVariable.FONT_AWESOME_VERSION='6.7.2'
 # -------------------------------------------
 
 #----- Project Specific Folders (use absolute path)
