--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -10,7 +10,7 @@
 
 # . value 1                 #  value 2                              # value 3                   #    value 4                           # value 5 
 
-# build.gradle;                   build.gradle;  .\;                     build_gradle.vm;                      1
+build.gradle;                   build.gradle;                         ;                             build_gradle.vm;                      1
 # settings.gradle;                settings.gradle;  ./ ;                 settings_gradle.vm;                    1
 
 # application.properties      ; application.properties                ; ${RES}                    ; main-resources/application.properties ; R
