--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version ${SPRING_BOOT_VERSION}
+    id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.graalvm.buildtools.native' version '0.10.6'
 }
@@ -10,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(${JAVA_VERSION})
+        languageVersion = JavaLanguageVersion.of(23)
     }
 }
 
@@ -39,8 +39,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     // runtimeOnly 'com.mysql:mysql-connector-j'
 
-    runtimeOnly 'org.webjars:bootstrap:5.3.3'
-    runtimeOnly 'org.webjars:font-awesome:6.7.2'
+    runtimeOnly 'org.webjars:bootstrap:${BOOTSTRAP_VERSION}'
+    runtimeOnly 'org.webjars:font-awesome:${FONT_AWESOME_VERSION}'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // testImplementation 'org.springframework.security:spring-security-test'
