--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     // runtimeOnly 'com.mysql:mysql-connector-j'
 
-    runtimeOnly 'org.webjars:bootstrap:${BOOTSTRAP_VERSION}'
-    runtimeOnly 'org.webjars:font-awesome:${FONT_AWESOME_VERSION}'
+    runtimeOnly 'org.webjars:bootstrap:5.3.3'
+    runtimeOnly 'org.webjars:font-awesome:6.7.2'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // testImplementation 'org.springframework.security:spring-security-test'
