Ridefinito il template SpringBootStarter_java.vm

--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -15,7 +15,7 @@ settings.gradle;                settings.gradle;                      ;         
 
 # application.properties      ; application.properties                ; ${RES}                    ; main-resources/application.properties ; R
 JPA entity                    ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model  ; main-java/XxxJpaEntity_java.vm
-# SpringBootStarter           ; SpringBootStarter.java                ; ${SRC}/${ROOT_PKG}        ; main-java/SpringBootStarter_java_simple.vm   ; 1
+SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}        ; main-java/SpringBootStarter_java.vm   ; 1
 
 # String methods examples     ; string_methods.txt                    ; ${TMP}                    ; string_methods.vm                     ; 1
 # Map examples                ; map_examples.txt                      ; ${TMP}                    ; map_examples.vm                       ; 1
