--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -8,14 +8,15 @@
 # . value 5 : number of execution : "1" for "ONCE" for all entities, default is multiple executions ( executed for each entity )
 #---------------------------------------------------------
 
-# . value 1                 #  value 2                              # value 3                   #    value 4                           # value 5 
+# . value 1                 #  value 2                              # value 3                            #    value 4                           # value 5 
 
-build.gradle;                   build.gradle;                         ;                             build_gradle.vm;                      1
-settings.gradle;                settings.gradle;                      ;                             settings_gradle.vm;                   1
+build.gradle;                   build.gradle;                         ;                                  build_gradle.vm;                         1
+settings.gradle;                settings.gradle;                      ;                                  settings_gradle.vm;                      1
 
-# application.properties      ; application.properties                ; ${RES}                    ; main-resources/application.properties ; R
-JPA entity                    ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model  ; main-java/XxxJpaEntity_java.vm
-SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}        ; main-java/SpringBootStarter_java.vm   ; 1
+# application.properties      ; application.properties                ; ${RES}                          ; main-resources/application.properties ; R
+JPA entity                    ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model        ; main-java/XxxJpaEntity_java.vm
+SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}              ; main-java/SpringBootStarter_java.vm   ; 1
+Spring repository             ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository   ; main-java/XxxRepository_java.vm       ; *
 
 # String methods examples     ; string_methods.txt                    ; ${TMP}                    ; string_methods.vm                     ; 1
 # Map examples                ; map_examples.txt                      ; ${TMP}                    ; map_examples.vm                       ; 1
