--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -13,12 +13,14 @@
 build.gradle;                   build.gradle;                         ;                                  build_gradle.vm;                         1
 settings.gradle;                settings.gradle;                      ;                                  settings_gradle.vm;                      1
 
-# application.properties      ; application.properties                ; ${RES}                          ; main-resources/application.properties ; R
+# application.properties      ; application.properties                ; ${RES}                          ; main-resources/application.properties   ; R
 JPA entity                    ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model        ; main-java/XxxJpaEntity_java.vm
-SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}              ; main-java/SpringBootStarter_java.vm   ; 1
-Spring repository             ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository   ; main-java/XxxRepository_java.vm       ; *
 
-# String methods examples     ; string_methods.txt                    ; ${TMP}                    ; string_methods.vm                     ; 1
+SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}              ; main-java/SpringBootStarter_java.vm     ; 1
+
+Spring repository             ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository   ; main-java/XxxRepository_java.vm         ; *
+
+Spring Service interface      ; ${BEANNAME}Service.java               ; ${SRC}/${ROOT_PKG}/services     ;  main-java/XxxService_java.vm           ; *
 # Map examples                ; map_examples.txt                      ; ${TMP}                    ; map_examples.vm                       ; 1
 # Tag examples                ; tag_examples_${BEANNAME}.txt          ; ${TMP}                    ; tag_examples.vm                       ; *
 
