--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -8,34 +8,19 @@
 # . value 5 : number of execution : "1" for "ONCE" for all entities, default is multiple executions ( executed for each entity )
 #---------------------------------------------------------
 
-# . value 1                 #  value 2                              # value 3                            #    value 4                           # value 5 
+# value 1                       #  value 2                              # value 3                               # value 4                                      # value 5 
 
-build.gradle;                   build.gradle;                         ;                                  build_gradle.vm;                         1
-settings.gradle;                settings.gradle;                      ;                                  settings_gradle.vm;                      1
+build.gradle;                   build.gradle                            ;                                       ; build_gradle.vm                             ; 1
+settings.gradle;                settings.gradle                         ;                                       ; settings_gradle.vm                          ; 1
 
-# application.properties      ; application.properties                ; ${RES}                          ; main-resources/application.properties   ; R
-JPA entity                    ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model        ; main-java/XxxJpaEntity_java.vm
+# application.properties        ; application.properties                ; ${RES}                                ; main-resources/application.properties       ; R
+JPA entity                      ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model              ; main-java/XxxJpaEntity_java.vm
 
-SpringBootStarter             ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}              ; main-java/SpringBootStarter_java.vm     ; 1
+SpringBootStarter               ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}                    ; main-java/SpringBootStarter_java.vm         ; 1
 
-Spring repository             ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository   ; main-java/XxxRepository_java.vm         ; *
+Repository                      ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository         ; main-java/XxxRepository_java.vm             ; *
 
-Spring Service interface      ; ${BEANNAME}Service.java               ; ${SRC}/${ROOT_PKG}/services     ;  main-java/XxxService_java.vm           ; *
-# Map examples                ; map_examples.txt                      ; ${TMP}                    ; map_examples.vm                       ; 1
-# Tag examples                ; tag_examples_${BEANNAME}.txt          ; ${TMP}                    ; tag_examples.vm                       ; *
+Service interface               ; ${BEANNAME}Service.java               ; ${SRC}/${ROOT_PKG}/services           ; main-java/XxxService_java.vm                ; *
 
-# Loader examples             ; loader_examples.txt                   ; ${TMP}                    ; loader_examples.vm                    ; 1
-# Loader2 examples            ; loader2_examples.txt                  ; ${TMP}                    ; loader2_examples.vm                   ; 1
-
-# Generator examples          ; generator_examples_${BEANNAME}.txt    ; ${TMP}                    ; generator_examples.vm                 ; 
-# Generator examples          ; generator_examples_1.txt              ; ${TMP}                    ; generator_examples.vm                 ; 1
-
-# Target examples             ; target_examples_${BEANNAME}.txt       ; ${TMP}                    ; target_examples.vm                    ; 
-# Target examples             ; target_examples_1.txt                 ; ${TMP}                    ; target_examples.vm                    ; 1
-# Target force name           ; target_force_name_${BEANNAME}.txt     ; ${TMP}                    ; target_force_name.vm                  ; 
-
-# Include/Parse examples      ; include_parse_${BEANNAME}.txt         ; ${TMP}                    ; include_parse_example.vm              ;
-
-# Literal values Java         ; ${BEANNAME}Values.java                ; ${SRC}/${ROOT_PKG}/tmp    ; literal_values_for_java.vm            ;
-# Literal values JavaScript   ; ${BEANNAME}Values.js                  ; ${TMP}/jsvalues           ; literal_values_for_javascript.vm      ;
-# Literal values Python       ; ${BEANNAME}Values.py                  ; ${TMP}/python             ; literal_values_for_python.vm          ;
+Service implemtation            ; ${BEANNAME}ServiceImp.java            ; ${SRC}/${ROOT_PKG}/services.impl      ; main-java/XxxServiceImpl_java.vm            ; *
+ 
