--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -22,5 +22,5 @@ Repository                      ; ${BEANNAME}Repository.java            ; ${SRC}
 
 Service interface               ; ${BEANNAME}Service.java               ; ${SRC}/${ROOT_PKG}/services           ; main-java/XxxService_java.vm                ; *
 
-Service implemtation            ; ${BEANNAME}ServiceImp.java            ; ${SRC}/${ROOT_PKG}/services.impl      ; main-java/XxxServiceImpl_java.vm            ; *
+Service implemtation            ; ${BEANNAME}ServiceImpl.java           ; ${SRC}/${ROOT_PKG}/services/impl      ; main-java/XxxServiceImpl_java.vm            ; *
  
