--- a/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
+++ b/TelosysTools/templates/sprintboot-jpa-thymeleaf/templates.cfg
@@ -8,19 +8,25 @@
 # . value 5 : number of execution : "1" for "ONCE" for all entities, default is multiple executions ( executed for each entity )
 #---------------------------------------------------------
 
-# value 1                       #  value 2                              # value 3                               # value 4                                      # value 5 
+# value 1                       #  value 2                            # value 3                               # value 4                                      # value 5 
 
-build.gradle;                   build.gradle                            ;                                       ; build_gradle.vm                             ; 1
-settings.gradle;                settings.gradle                         ;                                       ; settings_gradle.vm                          ; 1
+build.gradle;                   build.gradle                        ;                                           ; build_gradle.vm                               ; 1
+settings.gradle;                settings.gradle                     ;                                           ; settings_gradle.vm                            ; 1
 
-# application.properties        ; application.properties                ; ${RES}                                ; main-resources/application.properties       ; R
-JPA entity                      ; ${BEANNAME}.java                      ; ${SRC}/${ROOT_PKG}/model              ; main-java/XxxJpaEntity_java.vm
+# application.properties        ; application.properties            ; ${RES}                                    ; main-resources/application.properties         ; R
 
-SpringBootStarter               ; ${PROJECT_NAME}Application.java       ; ${SRC}/${ROOT_PKG}                    ; main-java/SpringBootStarter_java.vm         ; 1
+JPA entities                    ; ${BEANNAME}.java                  ; ${SRC}/${ROOT_PKG}/model                  ; main-java/XxxJpaEntity_java.vm                ; *
 
-Repository                      ; ${BEANNAME}Repository.java            ; ${SRC}/${ROOT_PKG}/repository         ; main-java/XxxRepository_java.vm             ; *
+SpringBootStarter               ; ${PROJECT_NAME}Application.java   ; ${SRC}/${ROOT_PKG}                        ; main-java/SpringBootStarter_java.vm           ; 1
 
-Service interface               ; ${BEANNAME}Service.java               ; ${SRC}/${ROOT_PKG}/services           ; main-java/XxxService_java.vm                ; *
+Repository                      ; ${BEANNAME}Repository.java        ; ${SRC}/${ROOT_PKG}/repository             ; main-java/XxxRepository_java.vm               ; *
 
-Service implemtation            ; ${BEANNAME}ServiceImpl.java           ; ${SRC}/${ROOT_PKG}/services/impl      ; main-java/XxxServiceImpl_java.vm            ; *
- 
+Service interface               ; ${BEANNAME}Service.java           ; ${SRC}/${ROOT_PKG}/services               ; main-java/XxxService_java.vm                  ; *
+
+Service implementation          ; ${BEANNAME}ServiceImpl.java       ; ${SRC}/${ROOT_PKG}/services/impl          ; main-java/XxxServiceImpl_java.vm              ; *
+
+Controller                      ; ${BEANNAME}Controller.java        ; ${SRC}/${ROOT_PKG}/web/controller         ; main-java/XxxController_java.vm               ; *
+
+Mesage class                    ; Message.java                      ; ${SRC}/${ROOT_PKG}/web/controller/util    ; main-java/XxxMessage_java.vm                  ; 1
+
+UrlUtil class                   ; UrlUtil.java                      ; ${SRC}/${ROOT_PKG}/web/controller/util    ; main-java/XxxUrlUtil_java.vm                  ; 1
