--- a/TelosysTools/telosys-tools.cfg
+++ b/TelosysTools/telosys-tools.cfg
@@ -32,8 +32,12 @@ ProjectVariable.REST_API_ROOT=/api/v1
 ProjectVariable.REST_URL_ROOT=http://localhost:8080
 ProjectVariable.JAVA_VERSION=23
 ProjectVariable.SPRING_BOOT_VERSION='3.4.4'
-ProjectVariable.BOOTSTRAP_VERSION='5.3.1'
-ProjectVariable.FONT_AWESOME_VERSION='6.7.2'
+ProjectVariable.GRADLE_POPPER_VERSION='2.11.17'
+ProjectVariable.GRADLE_BOOTSTRAP_VERSION='5.3.1'
+ProjectVariable.GRADLE_FONT_AWESOME_VERSION='6.7.2'
+ProjectVariable.POPPER_VERSION=2.11.17
+ProjectVariable.BOOTSTRAP_VERSION=5.3.1
+ProjectVariable.FONT_AWESOME_VERSION=6.7.2
 # -------------------------------------------
 
 #----- Project Specific Folders (use absolute path)
